# economic-regime-Factor-ETF-allocation

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  backtest.py  current_factor_weights.csv  dashboard.py  economic_regime_with_fred.py  format_allocations.py  optimal_allocations.csv  optimal_allocations_formatted.xlsx  optimizer.py  pyproject.toml  regime_labels_expanded.csv  requirements.txt  run_daily.bat  run_daily.ps1  run_daily_update.py
.githooks/: pre-commit  pre-commit.ps1
.github/workflows/: ci.yml
config/: paper_trading.yaml
docs/: AUTOMATION_SETUP.md  BACKTEST_VECTORIZATION.md  CHANGES_SUMMARY.md  CONTINUOUS_IMPROVEMENT.md  EFFICIENCY_RECOMMENDATIONS.md  FAST_MODE_GUIDE.md  FUTURE_EXTENSIONS.md  GETTING_STARTED_PAPER_TRADING.md  MIGRATION_GUIDE.md  P0_CACHE_ARCHITECTURE.md  PERFORMANCE_PROFILE.md  PRODUCTION_READY.md  QUICK_START.md  REFACTOR_ARCHITECTURE.md  REGIME_MACRO_CACHE.md  SYSTEM_CHECKLIST.md  TASK_SCHEDULER_SETUP.md  TEST_TODAY_CHECKLIST.md  VERIFICATION_COMMANDS.md  WALK_FORWARD_EVALUATION.md  bootstrap_reconciliation.md  interview_summary.md
experiments/: exp_a_vix_bidirectional.py  exp_b_momentum_tilt.py  exp_c_seasonality.py  exp_d_credit_trigger.py  exp_d_walkforward.py  exp_e_universe_expansion.py  exp_f_credit_standalone.py  exp_f_walkforward.py  exp_g_optimizer_expanded.py
outputs/: current_factor_weights.csv  optimal_allocations.csv  optimal_allocations_formatted.xlsx  regime_labels_expanded.csv
scripts/: analyze_walk_forward.py  audit_backtest_framework.py  benchmark_comparison_chart.py  compare_stagflation_experiment.py  compute_vintage_hit_rate.py  current_allocation.py  diagnose_macro_score_predictive_power.py  diagnose_regime_signal_value.py  diagnose_stagflation.py  diagnose_stagflation_optimizer.py  generate_vintage_regime_labels.py  list_walk_forward_runs.py  performance_analysis.py  profile_experiment_runtime.py  run_12m_lookback_experiment.py  run_12m_lookback_full_validation.py  run_18m_lookback_experiment.py  run_200dma_experiment.py  run_asset_momentum_experiment.py  run_asset_momentum_experiment_fast.py  run_baseline_turnover_attribution.py  run_breadth_flag_experiment.py  run_breadth_overlay_experiment.py  run_capped_rf_experiment.py  run_convex_exposure_experiment.py  run_dual_speed_momentum_experiment.py  run_expanded_universe_experiment.py  run_hybrid_signal_experiment.py  run_hybrid_weight_sweep.py  run_inversion_flag_experiment.py  run_invvol_ablation_experiment.py  run_invvol_ablation_full_wf_experiment.py  run_market_lookback_sweep.py  run_momentum_ensemble_experiment.py  run_momentum_vs_meanrev_experiment.py  run_monthly_rebalance_dry_run.py  run_portfolio_construction_experiment.py  run_pure_market_comparison.py  run_quarterly_rebalance_experiment.py  run_regime_smoothing_experiment.py  (+27 more)
src/: backtest.py  backtest_polars.py  config.py  daily_report.py  database.py  economic_regime.py  format_allocations.py  notify.py  optimizer.py  overrides.py  pipeline.py  regime_forecast.py  status.py
src/allocation/: __init__.py  format_allocations.py  optimizer.py  vol_scaling.py
src/backtest/: __init__.py  engine.py  metrics.py
src/data/: __init__.py  fred_cache.py  fred_ingestion.py  fred_vintage.py  market_ingestion.py  pipeline_data.py
src/evaluation/: __init__.py  benchmarks.py  model_results_db.py  walk_forward.py
src/execution/: __init__.py  auto_rebalance.py  create_orders.py  ibkr_adapter.py  monthly_rebalance_runner.py  reconcile_post_trade.py  reporting.py  safety.py  submit_orders.py
src/features/: __init__.py  macro_features.py  market_features.py  transforms.py
src/models/: __init__.py  regime_classifier.py  regime_forecast.py
src/research/: bootstrap_significance.py  exp_f_walkforward.py  sensitivity.py
src/utils/: __init__.py  cache.py  database.py  fred_key.py  logging_config.py  retry.py  ticker_universe.py  timing.py
tests/: __init__.py  test_bootstrap_significance.py  test_config_and_cache.py  test_daily_report.py  test_economic_regime.py  test_engine_helpers.py  test_notify.py  test_optimizer.py  test_regime_overrides.py  test_secrets_and_tickers.py  test_sensitivity.py  test_threshold_sweep.py
