[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "economic-regime-factor-etf-allocation"
version = "1.0.0"
description = "Macro-driven, volatility-aware asset allocation framework for factor ETFs"
readme = "README.md"
requires-python = ">= 3.8"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "yfinance>=0.2.0",
    "fredapi>=0.5.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]
