[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "economic-regime-factor-etf-allocation"
version = "1.0.0"
description = "Macro-driven, volatility-aware asset allocation framework for factor ETFs"
readme = "README.md"
requires-python = ">= 3.10"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "yfinance>=0.2.0",
    "fredapi>=0.5.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.1",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.3.0",
    "ib-insync>=0.9.86",
    "pyyaml>=6.0",
    "matplotlib>=3.10.8",
    "twilio>=9.0.0",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pandas-stubs>=2.2.2.240807",
    "ruff>=0.15.2",
    "types-python-dateutil>=2.9.0.20260124",
]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # Consistent formatting
    "W",   # less critical issues (whitespace)
    "F",   # Actual bugs before running the code
    "I",   # Import sorting
    "N",   # Consistent naming
    "UP",  # Outdated syntax that can be modernized
    "B",   # Common bugs and anti-patterns
    "C4",  # Improves list/dict comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

# Entry-point scripts use `sys.path.insert(0, ...)` so the project root resolves
# whether called via `uv run`, `python scripts/X.py`, or `python -m`. That makes
# downstream `from src.X import Y` lines unavoidably non-top-of-file. N806 covers
# a few math-notation variables (e.g. `D`, `N`) inside experiment scripts.
[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["E402", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Mypy configuration
[tool.mypy]
# Pragmatic config for pandas/numpy-heavy quant code. Per the
# audit-python-project skill: `strict = true` is aspirational here -- pandas
# stubs flag many runtime-safe operations (operator, arg-type, union-attr)
# that aren't real bugs. We keep the checks that catch real bugs (untyped
# function bodies, none/int mixing in our code, undefined imports) and
# disable the categories dominated by pandas-stub false positives.
python_version = "3.11"
check_untyped_defs = true           # Type-check function bodies even when signature is untyped
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
disable_error_code = [
    "import-untyped",    # 3rd-party libs without stubs (fredapi, yfinance, ib_insync)
    "type-arg",          # missing generic params on stdlib types (low value vs noise)
    "operator",          # pandas DataFrame/Series operator overloads
    "arg-type",          # pandas arg-type widening (rg: DataFrame->Series->scalar paths)
    "union-attr",        # pandas Index union-attribute access (.to_period etc.)
    "no-untyped-call",   # calling third-party untyped helpers
    "no-untyped-def",    # not requiring full type hints on every function
    "no-any-return",     # pandas returns Any in many places by design
    "attr-defined",      # pandas Index runtime attrs that aren't in stubs
]

[[tool.mypy.overrides]]             # Creates an exception for specific modules. Without this mypy would be on every import as the libraries listed don't ship with type annotations
module = [
    "fredapi.*",
    "yfinance.*",
    "scipy.*",
    "openpyxl.*",
    "ib_insync.*",
    "yaml.*",
]
ignore_missing_imports = true
